updated gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ Temporary Items
 [Ll]ocal
 [Ss]cripts
 pyvenv.cfg
+.venv/
 .venv
 pip-selfcheck.json
 
@@ -83,3 +84,16 @@ pip-selfcheck.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,linux,venv,visualstudiocode
+Apollo.io
+
+__pycache__/
+*.csv
+*.mp3
+.ruff_cache/
+data/
+.pytest_cache/
+t5-shakespeare/
+t5-shakespeare2/
+t5-shakespeare2/
+notebooks/
+img/
