Update .gitignore to include additional patterns and remove unnecessary entries; delete compiled Python bytecode file.

--- a/.gitignore
+++ b/.gitignore
@@ -83,10 +83,9 @@ pip-selfcheck.json
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/macos,linux,venv,visualstudiocode
-Apollo.io
-
 __pycache__/
+__pycache__
+*.pyc
 *.csv
 *.mp3
 .ruff_cache/
@@ -94,6 +93,9 @@ data/
 .pytest_cache/
 t5-shakespeare/
 t5-shakespeare2/
-t5-shakespeare2/
 notebooks/
 img/
+
+# End of https://www.toptal.com/developers/gitignore/api/macos,linux,venv,visualstudiocode
+Apollo.io
+
